chore(experiments): gitignore csv and ods result files
Signed-off-by: Thiago P. Bueno <thiago.pbueno@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ share/
 # wandb
 wandb
 
+# results
+experiments/results/
+*.csv
+*.ods
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
